<resources>
    <string name="app_name">ProjectG104</string>

    // Strings MainActivity
    <string name="btn_Home">PRODUCTOS</string>
    // Strings MaintActivity2
    <string name="btn_InfoProduct1">INFO</string>
    <string name="btn_InfoProduct2">INFO</string>
    <string name="btn_InfoProduct3">INFO</string>
    <string name="text_Product1">Nombre</string>
    <string name="text_Product2">Descripcion</string>
    <string name="text_Product3">Precio</string>
    <string name="text_titleHome">PRODUCTOS</string>

    // Strings MaintActivity3
    <string name="btn_InfoProduct">REGRESAR</string>
</resources>